--- a/package.json
+++ b/package.json
@@ -10,13 +10,12 @@
   },
   "dependencies": {
     "element-ui": "^2.15.14",
-    "vite-plugin-vue2": "^2.0.3",
     "vue": "^2.7.15",
     "vue-router": "^3.5.2",
     "vue-template-compiler": "^2.7.15"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^4.5.0",
-    "vite": "^5.0.0"
+    "@vitejs/plugin-vue2": "^2.3.1",
+    "vite": "^3.2.7"
   }
 }
